test/parser.d/invalid/parens.souc.bad
main() = do
	if "ok"
		print("bad parens")
	end if
end main
